Use PortAudio instead of PulseAudio
Add PortAudio to the external deps build system
Add networking system
Use Qt style docstrings

Use explicit integer widths for packet structures

Use calloc for allocating zero-initialized memory in networking system.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.14)
 project(udp-vc
   VERSION 0.2.0
   DESCRIPTION "Simple SSL/TLS chat server & client"
-  LANGUAGES C
+  LANGUAGES C CXX
 )
 
 set(PROJECT_SOURCE_DIR src)
@@ -17,7 +17,6 @@ configure_file(
 )
 
 find_package(OpenSSL REQUIRED)
-find_package(PulseAudio REQUIRED)
 
 add_subdirectory(extern)
 add_subdirectory(${PROJECT_SOURCE_DIR}/shared)
@@ -27,18 +26,20 @@ add_subdirectory(${PROJECT_SOURCE_DIR}/server)
 target_include_directories(udpvc-client PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${PROJECT_SOURCE_DIR}/shared
+  ${OPENSSL_INCLUDE_DIR}
+  ${OPUS_INCLUDE_DIR}
 )
 
 target_include_directories(udpvc-server PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${PROJECT_SOURCE_DIR}/shared
+  ${OPENSSL_INCLUDE_DIR}
 )
 
 target_link_libraries(udpvc-client
   ${OPENSSL_LIBRARIES}
-  pulse
-  pulse-simple
   opus
+  portaudio
 
   udpvc-shared
 )
