--- a/src/shared/CMakeLists.txt
+++ b/src/shared/CMakeLists.txt
@@ -1,3 +1,6 @@
 add_library(udpvc-shared
   polling.c
+  networking.c
 )
+target_link_libraries(udpvc-shared ${OPENSSL_LIBRARIES})
+target_include_directories(udpvc-shared PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
