--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,9 @@
 enable_testing()
 
-add_executable(udpvc-networking-tests networking_tests.c)
+add_executable(udpvc-networking-tests
+  tests.c
+  networking_tests.c
+)
 target_link_libraries(udpvc-networking-tests udpvc-shared)
 
 add_test(NAME "networking-packet-creation" COMMAND udpvc-networking-tests "creation")
