--- a/src/shared/config.h.in
+++ b/src/shared/config.h.in
@@ -3,4 +3,6 @@
 #define UDPVC_VERSION "@PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@.@PROJECT_VERSION_PATCH@"
 #define UDPVC_DESCRIPTION "@PROJECT_DESCRIPTION@"
 
+#define UDPVC_DEFAULT_PORT "6060"
+
 #endif
